--- a/css/styles.css
+++ b/css/styles.css
@@ -1,421 +1,206 @@
-/* main background: #FFFFFF; */
-/* hero, footer background: #2F303A; */
-/* secondary background: #F5F4FA; */
-/* текст color: #757575; */
-/* текст color: #2196F3; */
-/* заголовки color: #212121 */
-
-html {
-    box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
-
-
 :root {
+    --logo-black: #000000;
+    --logo-white: #FFFFFF;
     --main-text-color: #757575;
     --secondary-text-color: #2196F3;
     --header-text-color: #212121;
+    --hero-footer-color: #2F303A;
+    --secondary-color: #F5F4FA;
+    --footer-contacts-color: rgba(255, 255, 255, 0.6);
 }
-
-ul {
-    list-style: none;
-    padding-left: 0;
-}
-
 body {
-    background-color:#FFFFFF;
     font-family: 'Roboto', sans-serif;
-}
-
-.header, section, .foot {
-    width: 1600px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-.container {
-    width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header .container {
-    display: flex;     
-}
-nav, .head-nav {
-    display: flex;
-    align-items: center;
-}
-.head-nav .item {
-    display: flex;    
-}
-.head-nav .item + .item {
-    margin-left: 50px;
-}
-.head-cont {
-    display: flex;
-    align-items: center;
-}
-.head-cont {
-    display: flex;
-    margin-left: auto;    
-}
-.head-cont .item + .item {
-    margin-left: 50px;
-}
-
-.text-web {
-    color: var(--secondary-text-color);
-}
-
-.text-studio {    
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: #000000;
-    display: inline-block;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    margin-right: 93px;    
-}
-.head-nav, .head-cont, h1, h2, h3, p {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.a-nav, .text-studio {
-    text-decoration: none;
-}
-.a-nav:hover{
-    color: var(--secondary-text-color);
-}
-.a-nav:focus {
-    color: var(--secondary-text-color);
-}
-.a-nav {
-    color: var(--header-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-}
-.a-nav.stud-act {
-    color: var(--secondary-text-color);
-}
-.a-head:hover {
-    color: var(--secondary-text-color);
-}
-.a-head:focus {
-    color: var(--secondary-text-color);
-}
-.a-head {
-    text-decoration: none;
-    color: var(--main-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-}
-
-
-/* 1 секция Hero */
-
-.hero {
-    background:#2F303A;
-    color: #FFFFFF;    
-}
-.hero-h {
-    padding-top: 200px;
-    margin-bottom: 30px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;    
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    max-width: 696px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.button-hero {
-    display:inline-block;
-    margin-bottom: 200px;
-    padding: 10px 32px;    
-    min-width: 200px;   
-    border-radius: 4px;
-    background: var(--secondary-text-color);
-    color: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;       
-    align-items: center;    
-    letter-spacing: 0.06em;
-    
-}
-
-/* 2 секция */
-
-.hide {
-    display: none;
-}
-.benefits {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    display: flex;
-    align-items: center;
-    margin-left: -30px;
-}
-.benefits-h {
-    margin-bottom: 10px;
-    color: var(--header-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;    
-}
-.benefits-p {
-    color: var(--main-text-color);
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;    
     letter-spacing: 0.03em;
+    color: var(--main-text-color);
 }
-.benefits .item {       
-    flex-basis: calc(100% / 4 - 30px);
-    text-align: left;
-    margin-left: 30px;
+.section-title {
+    color: var(--header-text-color);
+    font-size: 36px;
+    line-height: 1.16;
 }
+.link {    
+    text-decoration: none;
+    color: inherit;
+}
+.list {
+    list-style: none;
+}
+.button {
+    font-family: inherit;
+    cursor: pointer;
+    border-radius: 4px;
+    border: transparent;
+}
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    /* IE6, IE7 */    
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+
+
+
+/* ----------MAIN PAGE---------- */
+/* Header */
+.logo {
+    font-family: 'Raleway', sans-serif;
+    font-size: 26px;
+    line-height: 1.2;
+    color: var(--secondary-text-color);
+}
+.logo-black {
+    color: var(--logo-black);
+}
+.header-pages .link {
+    color: var(--header-text-color);
+}
+.header-pages .link,
+.header-contacts .link {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+.header-pages .link:hover,
+.header-contacts .link:hover {
+    color: var(--secondary-text-color);
+}
+.header-pages .link:focus,
+.header-contacts .link:focus {
+    color: var(--secondary-text-color);
+}
+/* Header */
+
+
+
+/* 1 секция HERO */
+.hero {
+    background-color: var(--hero-footer-color);
+}
+.hero-title {
+    color: var(--logo-white);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+}
+.hero-button {    
+    padding: 10px 32px;    
+    background-color: var(--secondary-text-color);
+    color: var(--logo-white);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);    
+} 
+.hero-button:hover,
+.hero-button:focus {
+    background: #188CE8;
+}
+/* 1 секция */
+
+
+
+/* 2 секция */
+.benefits-title {
+    color: var(--header-text-color);
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+/* 2 секция */
+
 
 
 /* 3 секция */
 
-.options {
-    margin-bottom: 50px;
-    color: var(--header-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-}
-.options-list {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 94px;
-    display: flex;
-    margin-left: -30px;
-}
-.options-list .item {
-    display: flex;
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-}
+/* 3 секция */
+
+
 
 /* 4 секция */
-
-.section-four {
-    background: #F5F4FA;
-}
 .team {
-    padding-top: 94px;
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
+    background-color: var(--secondary-color);
 }
-.team-list {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 94px;
-    display: flex;
-    margin-left: -30px;
-}
-.team-list .item {
-    display: flex;
-}
-.team-list .card {
-    background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    width: 270px;   
-}
-.team-list .card {
-    flex-basis: calc(100% / 4 - 30px);
-    margin-left: 30px;
-}
-.member-pic {
-    margin-bottom: 30px;
-}
-.member {
-    margin-bottom: 10px;
+.team-member {
+    color: var(--header-text-color);
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.19;    
-    text-align: center;
-    letter-spacing: 0.03em;
+    line-height: 1.18;
 }
-.team, .member {
-    color: var(--header-text-color);
-}
-.section-four p {
-    color: var(--main-text-color);
-}
-.job {
-    padding-bottom: 30px;
-    font-weight: 400;
+.team-job {    
     font-size: 16px;
-    line-height: 1.19;    
-    text-align: center;
-    letter-spacing: 0.03em;
+    line-height: 1.18;
 }
+/* 4 секция */
+
+
 
 /* Footer */
-
-footer {
-    background: #2F303A;
+address {
+    font-style: inherit;
 }
-
-.foot-web, .adress {    
-    color: #FFFFFF;
+.footer {
+    background-color: var(--hero-footer-color);
 }
-.foot-web {
-    display: inline-block;
-    padding-top: 60px;
-    margin-bottom: 20px;
+.logo-white {
+    color: var(--logo-white);
 }
-.foot-web {
-    font-family: 'Raleway';    
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;    
-    letter-spacing: 0.03em;
+.footer-contacts[target="_blank"] {
+    color: var(--logo-white);
 }
-.adress {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;    
-    letter-spacing: 0.03em;
-    font-style: normal;
+.footer-contacts {
+    color: var(--footer-contacts-color);
 }
-.foot-cont, .foot-cont-tel {
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;   
-    letter-spacing: 0.03em;
-    font-style: normal;
-}
-.foot-web {
-    text-decoration: none;;
-}
-.foot-list {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 60px;
-}
-.adress, .foot-cont, .foot-cont-tel {
-    text-decoration: none;
-}
-.adress {
-    margin-bottom: 9px;
-}
-.foot-cont {
-    margin-bottom: 9px;
-}
-.foot .container {
-    text-align: left;
-}
-
-
-/* Portfolio */
-
-.port-hide {
-    display: none;
-}
-.button-set {
-    margin-top: 0;
-    margin-bottom: 50px;
-    padding-top: 94px;
-    display: inline-block;    
-}
-.button-set .item {
-    display: inline-block;
-}
-.button-set .item + item {
-    margin-left: 8px;
-}
-.a-nav.port-act {
+.footer-contacts:hover,
+.footer-contacts:focus {
     color: var(--secondary-text-color);
 }
+/* Footer */
+/* ----------MAIN PAGE---------- */
+
+
+
+/* ----------PORTFOLIO---------- */
+/* Фильтр услуг */
 .button-portfolio {
-    min-width: 73px;
-    padding: 6px 22px;
-    
-    border-radius: 4px;
-    background-color: #F5F4FA;
+    background-color: var(--secondary-color);
     color: var(--header-text-color);
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.62;    
-    text-align: center;
+    line-height: 1.62;
     letter-spacing: 0.03em;
-    border: none;
+    padding: 6px 22px;
 }
-.button-portfolio:hover {
+.button-portfolio:hover,
+.button-portfolio:focus {
     background-color: var(--secondary-text-color);
-    color: #FFFFFF;   
+    color: var(--logo-white);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+/* Фильтр услуг */
 
-/* pictures */
 
-.pic-set {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 94px;
-    display: flex;
-    margin-left: -30px;   
-    flex-wrap: wrap;
-}
-.port-pic {
-    margin-bottom: 20px;    
-}
-.port-filter-h {
-    margin-bottom: 4px;
+
+/* Примеры услуг */
+.service-title {
     color: var(--header-text-color);
-    font-weight: 700;
     font-size: 18px;
-    line-height: 2;    
+    line-height: 2;
     letter-spacing: 0.06em;
 }
-.port-filter-p {
-    padding-bottom: 20px;
-    color: var(--main-text-color);
-    font-weight: 400;
+.service-description {
     font-size: 16px;
-    line-height: 1.88;    
-    letter-spacing: 0.03em;
+    line-height: 1.88;
 }
-.pic-set > .item {
-    width: 370px;
-    height: 404px;       
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-    margin-left: 30px;
-    margin-top: 30px;
-}
+/* Примеры услуг */
+/* ----------PORTFOLIO---------- */
