--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,19 @@ ul {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+img {
+    display: block;
+}
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+.card-set .item {
+    margin-left: 30px;
+    margin-top: 30px;
+}
 
 
 
@@ -121,13 +134,10 @@ ul {
 .header-container .link {
     display: block;
 }
-.header-container, .nav,
-.logo-link {
-    display: flex;
-}
 .header-container, .nav {
-    align-items: center;
-}
+    display: flex;
+    align-items: center;    
+}    
 .header {
     border-bottom: 1px solid var(--header-border-color);
 }
@@ -183,31 +193,16 @@ ul {
 .benefits {
     padding-bottom: 0;
 }
-.benefits-list {
-    display: flex;
-}
 .benefits-list .item {
-    flex-basis: 270px;    
-}
-.benefits-list .item + .item {
-    margin-left: 30px;
+    flex-basis: calc(100% / 4 - 30px);
 }
 /* 2 секция */
 
 
 
 /* 3 секция */
-.examples-list {
-    display: flex;
-}
-.examples-list .item + .item {
-    margin-left: 30px;
-}
-.examples-photo {
-    display: block;
-}
 .examples-list .item {
-    flex-basis: 370px;
+    flex-basis: calc(100% /3 - 30px);
 }
 /* 3 секция */
 
@@ -216,6 +211,9 @@ ul {
 /* 4 секция */
 .team {
     background-color: var(--secondary-color);
+}
+.team-content {
+    padding: 30px;
 }
 .team-member {
     color: var(--header-text-color);
@@ -227,26 +225,15 @@ ul {
 .team-job {    
     font-size: 16px;
     line-height: 1.18;
-    padding-bottom: 30px;
-}
-.team-photo {
-    display: block;
-    margin-bottom: 30px;
-}
-.team-list {
-    display: flex;
-    text-align: center;
-}
-.team-list .item + .item {
-    margin-left: 30px;
 }
 .team-list .item {
     background: var(--logo-white);    
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    flex-basis: 270px;
+    border-radius: 0px 0px 4px 4px;    
+    text-align: center;
+    flex-basis: calc(100% / 4 - 30px);
 }
 /* 4 секция */
 
@@ -319,9 +306,6 @@ address {
 
 
 /* Примеры услуг */
-.service-photo {
-    display: block;    
-}
 .service-title {    
     color: var(--header-text-color);
     font-size: 18px;
@@ -333,24 +317,12 @@ address {
     font-size: 16px;
     line-height: 1.88;    
 }
-.service-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-.service-list .item {    
-    margin-right: 30px;
-    margin-bottom: 30px;
-    flex-basis: 370px;
-}
 .border-card {
     border: 1px solid var(--bordfer-color);
     padding: 20px 24px;  
 }
-.service-list .item:nth-child(3n + 3) {
-    margin-right: 0;
-}
-.service-list .item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+.service-list .item {
+    flex-basis: calc(100% / 3 - 30px);
 }
 /* Примеры услуг */
 /* ----------PORTFOLIO---------- */
